--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 
     implementation "com.acmerobotics.roadrunner:ftc:0.1.6"
     implementation "com.acmerobotics.dashboard:dashboard:0.4.13"
+
+    implementation 'org.ftclib.ftclib:core:2.0.1' // core
 }
