--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -27,6 +27,9 @@ repositories {
     maven {
         url = 'https://maven.brott.dev/'
     }
+    maven {
+        url = 'https://jitpack.io'
+    }
 }
 
 dependencies {
@@ -37,4 +40,6 @@ dependencies {
     implementation "com.acmerobotics.dashboard:dashboard:0.4.13"
 
     implementation 'org.ftclib.ftclib:core:2.0.1' // core
+
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.0-Alpha'
 }
