--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -41,5 +41,5 @@ dependencies {
 
     implementation 'org.ftclib.ftclib:core:2.0.1' // core
 
-    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.0-Alpha'
+//    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.0-Alpha'
 }
